k8s/speedtest-tracker/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:0.21.2
          volumeMounts:
            - name: volume
              mountPath: /config
          ports:
            - name: web
              containerPort: 80
