k8s/speedtest-tracker/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://speedtest-tracker.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: speedtest-tracker
    gethomepage.dev/group: Status
    gethomepage.dev/icon: speedtest-tracker
    gethomepage.dev/name: Speedtest Tracker
    gethomepage.dev/widget.type: speedtest
    gethomepage.dev/widget.url: http://speedtest-tracker-service
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host speedtest-tracker.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
